removed MaxPermSize
this is not supported anymore on JDK8