@@ -383,7 +383,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Xmx512m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true</argLine>
+                    <argLine>-Xmx512m -Djava.net.preferIPv4Stack=true</argLine>
                     <includes>
                         <include>**/*Test.java</include>
                         <include>${acceptance.tests}</include>
